welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:1: error: ')' expected but '}' found.
def nearTen(num:Int):Boolean = {return ((num%10<=2)||(num%10>=8)} 
                                                                ^